css/style.css
/* ... */
#categories-placeholder button + button {
  margin-top: 4px;
}

button#category-restore-defaults {
  color: var(--color-text-negative);
  background-color: var(--color-accent);
}

button#category-open-panel {
  color: var(--color-text-black-high);
  background-color: var(--color-destructive);
}

/* #endregion Placeholder when all categories have been hidden */

/* #region Single section with a word swiper */

.word-section {
  position: relative;
  width: min(100%, 640px);
  box-shadow: var(--card-shadow-override, var(--card-shadow));
  border-radius: var(--card-border-radius);
  background-color: var(--color-card-background);
  margin-top: var(--card-margin-top, 0px);
  margin-bottom: 8px;
  padding: var(--card-padding);
  display: grid !important;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'nav-prev swiper-container nav-next';
}

.word-section:not(.visible) {
  display: none !important;
}

main section:last-child {
  margin-bottom: 108px;
}

/* #region Overlay with animated dots */

.section-overlay {
  --dot-color: var(--color-text);

  grid-area: 1 / 1 / -1 / -1;
  background-color: inherit;
  opacity: 0;
  z-index: 5;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: opacity var(--spinner-overlay-duration);
}

.section-overlay.visible {
  opacity: 1;
}

@keyframes jump-up-down {
  0%, 60%, 100% {
    opacity: 0.24;
    transform: scale(1);
  }
  20% {
    opacity: 1;
    transform: scale(1.1);
  }
}

.section-overlay .dot {
  --dot-size: 8px;

  width: var(--dot-size);
  height: var(--dot-size);
  border-radius: 50%;
  background-color: var(--dot-color);
  animation-name: jump-up-down;
  animation-duration: var(--spinner-dot-duration);
  animation-iteration-count: infinite;
  opacity: 0.24;
}

.section-overlay .dot:nth-child(1) { animation-delay: 0.2s; }
.section-overlay .dot:nth-child(2) { animation-delay: 0.4s; }
.section-overlay .dot:nth-child(3) { animation-delay: 0.6s; }

.section-overlay .dot + .dot {
  margin-left: 8px;
}

/* #endregion Overlay with animated dots */

/* Contains the wrapper created by Swiper */
.swiper-outer-container {
  grid-area: swiper-container;
  overflow: hidden;
  margin: calc(-1 * var(--card-padding)) 0;
}

/* Element created by Swiper */
.swiper-container {
  height: 100%;
  cursor: grab;
}

.swiper-container:active {
  cursor: grabbing;
}

.swiper-wrapper {
  min-height: calc(24px * var(--font-size-multiplier));
  will-change: transform;
}

.swiper-slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-weight: 500;
  font-size: calc(20px * var(--font-size-multiplier));
  line-height: 1.25;
  letter-spacing: 0.15px;
  word-break: break-word;
}

.swiper-slide p:not(:first-of-type) {
  font-size: 70%;
  font-weight: 400;
  margin-top: 4px;
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: center;
  text-transform: uppercase;
  text-align: center;
  font-size: 14px;
  letter-spacing: 1px;
  word-break: break-word;
  color: var(--color-secondary-text);
  height: 24px;
}

.word-section .header-container {
  display: var(--card-header-display);
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
}

.navigation-button-prev {
  grid-area: nav-prev;
}

.navigation-button-next {
  grid-area: nav-next;
}

[class^='navigation-button-'] {
  color: var(--color-accent);
  background-color: transparent;
  font-weight: 500;
  padding: var(--icon-padding);
  border-radius: 48px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: center;
  justify-self: center;
}

[class^='navigation-button-'] > .icon {
  opacity: 0.75;
}

/* #endregion Single section with a word swiper */

/* #region Prompt to open settings for the first time */

@keyframes appear-and-slide-up {
  0% {
    opacity: 0;
    transform: translate3d(0, 20px, 0);
  }
  100% {
    opacity: 1;
    transform: translate3d(0, 0px, 0);
  }
}

.prompt {
  --arrow-width: 12px;
  --arrow-height: 18px;
  --arrow-margin-left: calc(var(--card-padding) + var(--icon-padding) + 0.5 * var(--icon-size) - 0.5 * var(--arrow-width));
  --arrow-head-size: 20px;
  --arrow-clip-path-margin: 10px;
  --arrow-shadow-blur: 1px;

  position: relative;
  width: min(100%, 640px);
  margin-top: auto;
  display: flex;
  flex-direction: column;
  opacity: 0;
  will-change: opacity, transform;
  transform: translate3d(0, 20px, 0);
  animation-name: appear-and-slide-up;
  animation-duration: 500ms;
  animation-delay: 2s;
  animation-fill-mode: forwards;
}

.prompt .header-container {
  margin-top: 8px;
}

.prompt-card {
  position: relative;
  width: min(100%, 640px);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-border-radius);
  background-color: var(--color-card-background);
  margin-top: auto;
  padding: var(--card-padding);
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-areas: 'text button-close';
  z-index: 3;
}

.prompt-text-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: var(--card-padding) 8px;
}

.prompt-text-wrapper span {
  line-height: 1.5;
}

#close-prompt-settings .icon {
  color: var(--color-icon);
}

/* Arrow */
.prompt::before,
.prompt::after,
.prompt-card::before,
.prompt-card::after {
  content: '';
  position: absolute;
  background-color: var(--color-card-background);
  z-index: 2;
}

/* Arrow's shadow */
.prompt::before,
.prompt::after {
  --vertical-shift: 0.5px;

  filter: blur(var(--arrow-shadow-blur));
  background-color: var(--color-text-black-medium);
  z-index: 1;
  opacity: 0.75;
}

/* Arrow's body */
.prompt::before,
.prompt-card::before {
  top: calc(100% - 2px);
  left: var(--arrow-margin-left);
  width: var(--arrow-width);
  height: var(--arrow-height);
}
/* ... */

